Created basic page layout and styling for mobile

--- a/index.html
+++ b/index.html
@@ -4,6 +4,43 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
+        <link rel="stylesheet" type="text/css" href="css/style.css" />
     </head>
-    <body></body>
+    <body>
+        <div class="container">
+            <h1>Article heading</h1>
+
+            <div class="article-controls">
+                <a href="#" class="article-control article-left">Previous</a>
+                <a href="#" class="article-control article-right">Next</a>
+            </div>
+
+            <div class="image-container">
+                <img src="images/sample.jpg" alt="This is an image caption." />
+                <div class="image-caption">This is an image caption.</div>
+            </div>
+
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Error
+                incidunt itaque adipisci dolorum omnis facere nisi fugit
+                tempora, quam nesciunt perferendis pariatur blanditiis possimus
+                ex? Accusamus reiciendis doloremque saepe modi.
+            </p>
+
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Error
+                incidunt itaque adipisci dolorum omnis facere nisi fugit
+                tempora, quam nesciunt perferendis pariatur blanditiis possimus
+                ex? Accusamus reiciendis doloremque saepe modi.
+            </p>
+
+            <div class="ratings">
+                <a href="#" class="ratings rating-1">1 Star</a>
+                <a href="#" class="ratings rating-1">2 Stars</a>
+                <a href="#" class="ratings rating-1">3 Stars</a>
+                <a href="#" class="ratings rating-1">4 Stars</a>
+                <a href="#" class="ratings rating-1">5 Stars</a>
+            </div>
+        </div>
+    </body>
 </html>
