Added grid responsiveness

--- a/index.html
+++ b/index.html
@@ -8,12 +8,10 @@
     </head>
     <body>
         <div class="container">
-            <h1>Article heading</h1>
-
-            <div class="article-controls">
-                <a href="#" class="article-control article-left">Previous</a>
-                <a href="#" class="article-control article-right">Next</a>
-            </div>
+            <h1>
+                This is an example of an article heading that may or may not
+                take up two lines
+            </h1>
 
             <div class="image-container">
                 <img src="images/sample.jpg" alt="This is an image caption." />
@@ -33,6 +31,11 @@
                 tempora, quam nesciunt perferendis pariatur blanditiis possimus
                 ex? Accusamus reiciendis doloremque saepe modi.
             </p>
+
+            <div class="article-controls">
+                <a href="#" class="article-control article-left">Previous</a>
+                <a href="#" class="article-control article-right">Next</a>
+            </div>
 
             <div class="ratings">
                 <a href="#" class="ratings rating-1">1 Star</a>
