--- a/index.html
+++ b/index.html
@@ -45,5 +45,7 @@
                 <a href="#" class="ratings rating-1">5 Stars</a>
             </div>
         </div>
+
+        <script src="js/main.js"></script>
     </body>
 </html>
