Added scalable class names

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <title>Articles Ranker</title>
         <link rel="stylesheet" type="text/css" href="css/style.css" />
     </head>
     <body>
         <div class="container">
-            <h1>
+            <h1 class="article-heading">
                 This is an example of an article heading that may or may not
                 take up two lines
             </h1>
@@ -18,14 +18,14 @@
                 <div class="image-caption">This is an image caption.</div>
             </div>
 
-            <p>
+            <p class="article-paragraph">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Error
                 incidunt itaque adipisci dolorum omnis facere nisi fugit
                 tempora, quam nesciunt perferendis pariatur blanditiis possimus
                 ex? Accusamus reiciendis doloremque saepe modi.
             </p>
 
-            <p>
+            <p class="article-paragraph">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Error
                 incidunt itaque adipisci dolorum omnis facere nisi fugit
                 tempora, quam nesciunt perferendis pariatur blanditiis possimus
