Page dynamically loads data based on specified json file

--- a/index.html
+++ b/index.html
@@ -15,25 +15,13 @@
 
             <div class="image-container">
                 <img src="images/sample.jpg" alt="This is an image caption." />
-                <div class="image-caption">This is an image caption.</div>
+                <div class="image-caption"></div>
             </div>
 
-            <p class="article-paragraph">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Error
-                incidunt itaque adipisci dolorum omnis facere nisi fugit
-                tempora, quam nesciunt perferendis pariatur blanditiis possimus
-                ex? Accusamus reiciendis doloremque saepe modi.
-            </p>
+            <p class="article-paragraph"></p>
 
-            <p class="article-paragraph">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Error
-                incidunt itaque adipisci dolorum omnis facere nisi fugit
-                tempora, quam nesciunt perferendis pariatur blanditiis possimus
-                ex? Accusamus reiciendis doloremque saepe modi.
-            </p>
-
-            <div class="article-controls">
-                <a href="#" class="article-control article-left">Previous</a>
+            <div class="article-controls take-width">
+                <!-- <a href="#" class="article-control article-left">Previous</a> -->
                 <a href="#" class="article-control article-right">Next</a>
             </div>
 
