--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 
             <div class="article-controls take-width">
                 <!-- <a href="#" class="article-control article-left">Previous</a> -->
-                <a href="#" class="article-control article-right">Next</a>
+                <a id="next" href="#" class="article-control article-right">
+                    Next
+                </a>
             </div>
 
             <div class="ratings">
